part3/set5/33/ex33info.txt
Exercise 33: Define a concept to verify that certain math operations are 
             available

When we compile this with the strings present we get an error telling us:


main.cc:16:17: error: no matching function for call to ‘math(const
std::string&, const std::string&)’
   16 |     cout << math(lhs2, rhs2) << '\n';
      |             ~~~~^~~~~~~~~~~~
main.cc:16:17: note: there is 1 candidate
In file included from main.cc:1:
basicmath.h:18:6: note: candidate 1: ‘template<class LHS, class RHS>  requires
BasicMath<LHS, RHS> auto math(LHS, RHS)’
   18 | auto math(LHS lhs, RHS rhs)
      |      ^~~~
basicmath.h:18:6: note: template argument deduction/substitution failed:
note: constraints not satisfied
basicmath.h: In substitution of (...):
main.cc:16:17:   required from here
   16 |     cout << math(lhs2, rhs2) << '\n';
      |             ~~~~^~~~~~~~~~~~
basicmath.h:2:9:   required for the satisfaction of (...)
basicmath.h:3:5:   in requirements with (...)
basicmath.h:7:13: note: the required expression ‘(lhs - rhs)’ is invalid
    7 |         lhs - rhs;
      |         ~~~~^~~~~
basicmath.h:8:13: note: the required expression ‘(rhs - lhs)’ is invalid
    8 |         rhs - lhs;
      |         ~~~~^~~~~
basicmath.h:9:13: note: the required expression ‘(lhs * rhs)’ is invalid
    9 |         lhs * rhs;
      |         ~~~~^~~~~
basicmath.h:10:13: note: the required expression ‘(rhs * lhs)’ is invalid
   10 |         rhs * lhs;
      |         ~~~~^~~~~
basicmath.h:11:13: note: the required expression ‘(lhs / rhs)’ is invalid
   11 |         lhs / rhs;
      |         ~~~~^~~~~
basicmath.h:12:13: note: the required expression ‘(rhs / lhs)’ is invalid
   12 |         rhs / lhs;
      |         ~~~~^~~~~
basicmath.h:13:9: note: the required expression ‘- lhs’ is invalid
   13 |         - lhs;
      |         ^~~~~
basicmath.h:14:9: note: the required expression ‘- rhs’ is invalid
   14 |         - rhs;
      |         ^~~~~

The constraint prevents the compiler from instantiating this template for
strings, as those are not able to satisfy all of the concept's requirements
